--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "nanoid": "^5.1.5",
+    "uuid": "^11.1.0",
     "ws": "^8.18.2"
   }
 }
